# ic-test

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  chain_fusion.did  command_line.html  dfx.json  index.html  initArg.did  installation.html  out.json  out.rs  output.rs  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: ci.yml  pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  command_line.md  installation.md  introduction.md
docs/src/examples/: counter.md  evm_rpc.md  examples.md
examples/: counter.html  evm_rpc.html  examples.html
src/: arguments.rs  dependencies.rs  dfx_json.rs  generator.rs  ic_test_json.rs  lib.rs  main.rs
src/dummy_evm/: mod.rs
src/evm/: candid_value_to_rust.rs  mod.rs
src/generator/: arguments.rs  candid_to_rust.rs  candid_value_to_rust.rs  common.rs  dependencies.rs  dfx_json.rs  foundry_toml.rs  ic_test_json.rs  interactive_setup.rs  json2rust.rs  main.rs  test_structure.rs  type2json.rs
src/ic/: caller.rs  deployer.rs  http_outcalls.rs  mod.rs  provider.rs  test_principals.rs  user.rs
src/icp/: caller.rs  deployer.rs  http_outcalls.rs  mod.rs  provider.rs  user.rs
templates/: Cargo.toml.txt  lib.rs.txt  mod.evm.rs.txt  mod.rs.txt  tests.rs.txt
templates/icp/: Cargo.toml.txt  mod.rs.txt  test_setup.rs.txt  tests.rs.txt
templates/icp_evm/: Cargo.toml.txt  mod.rs.txt  test_setup.rs.txt  tests.rs.txt
tests/: bool_type.did  bool_value.did  candid_types.did  initArgument.did  no_args2.did  numbers_type.did  numbers_value.did  opt_types.did  opt_variant.did  test2.did  test4.did
