[package]
name = "ic-test"
version = "0.1.0"
edition = "2021"
description = "This tool helps to organize IC canister testing as well as cross-testing for ICP and EVM."
keywords = ["ic", "internet-computer", "testing"]
license = "MIT"
repository = "https://github.com/wasm-forge/ic-test"

[lib]
name = "ic_test"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "ic-test"
path = "src/generator/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
anyhow = { version = "1.0.97", default-features = false }
env_logger = "0.11.7"

syn = "2.0"
quote = "1.0"
candid_parser = "0.1.4"
ic-cdk-bindgen = { path = "../cdk-rs/src/ic-cdk-bindgen" }
prettyplease = "0.2.22"
serde_json = { version = "1.0" }
serde = "1.0.219"
regress = "0.10.3"
serde-json-schema = "0.1.1"
indexmap = { version = "2.8.0", features = ["serde"] }
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["full"] }
fuzzy-select = "0.1.3"
askama = "0.12.1"


alloy = { version = "0.12", features = ["full"] }
async-trait = "0.1.88"
alloy-node-bindings = "0.12.0"
lazy_static = "1.4.0"
pocket-ic = "7.0.0"
cargo_metadata = "0.19.1"
ic-agent = "0.39.3"
thiserror = "2.0.12"
candid = "0.10"
ic-cdk = "0.17.1"
slog = "2.7.0"
toml_edit = "0.22.24"
