[package]
name = "ic-test"
version = "0.1.3"
edition = "2021"
description = "This tool helps to organize IC canister testing as well as cross-testing between ICP and EVM."
keywords = ["ic", "internet-computer", "testing"]
license = "MIT"
repository = "https://github.com/wasm-forge/ic-test"

[lib]
name = "ic_test"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "ic-test"
path = "src/generator/main.rs"

[dependencies]
log = "0.4.27"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = { version = "1.0.98", default-features = false }
env_logger = "0.11.8"

syn = "2.0"
quote = "1.0"
candid_parser = "0.1.4"
#ic-cdk-bindgen = { path = "../cdk-rs/src/ic-cdk-bindgen" }
#wf-cdk-bindgen = { path = "../wf-cdk-bindgen" }
wf-cdk-bindgen = "0.1.6"


prettyplease = "0.2.32"
serde_json = { version = "1.0" }
serde = "1.0.219"
regress = "0.10.3"
serde-json-schema = "0.1.1"
indexmap = { version = "2.9.0", features = ["serde"] }
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
fuzzy-select = "0.1.3"
askama = "0.13"


alloy = { version = "0.12", features = ["full"], optional = true }
alloy-node-bindings = {version = "0.12.0", optional = true}
async-trait = "0.1.88"
lazy_static = "1.4.0"
pocket-ic = "7.0.0"
cargo_metadata = "0.19.1"
ic-agent = "0.40.0"
thiserror = "2.0.12"
candid = "0.10"
ic-cdk = "0.17.1"
slog = "2.7.0"
toml_edit = "0.22.24"
git2 = "0.20.1"
convert_case = "0.8.0"
dirs = "6.0.0"

[features]
evm = ["dep:alloy", "dep:alloy-node-bindings"]